# qa-agents

./: .gitignore  LICENSE  README.md  fingerprint.py  gap_detector.py  kb.py  profile.py  pyproject.toml
.github/workflows/: website-evidence.yml
agents/: auditor.md  beacon.md  herbie.md  inspector.md  lookout.md  mender.md  patch.md  quill.md  scout.md  scribe.md
agents/shared/: core-rules.md  house-rules.md
docs/: agents.md  architecture.md  demo.md  kb.md  profiles.md  strategy-architecture.md
docs/plans/: little-bytes-first-evidence-loop-spec.md
docs/reviews/: qa-agents-intent-and-live-target-audit.md
examples/: feature_request.md
examples/demo-runs/: README.md  little-bytes-pricing.json  personal-website-latest.json
profiles/: ecommerce.json  saas_dashboard.json
profiles/ecommerce/: house-rules.md  profile.json
profiles/little_bytes/: house-rules.md  profile.json
profiles/personal_website/: house-rules.md  profile.json
qa_agents/: __init__.py  __main__.py  cli.py  demo_export.py  fingerprint.py  gap_detector.py  generator.py  investigate.py  kb.py  models.py  parser.py  profile_config.py  profiles.py  public_export.py  renderer.py  run.py  strategies.py
schema/: 000_init.sql  001_digest.sql  002_perf_and_tracker.sql  003_ticket_id_compat.sql  004_gap_records.sql  005_execution_records.sql
schemas/: public-artifact.schema.json
tests/: test_cli.py  test_demo_export.py  test_fingerprint.py  test_gap_detector.py  test_generator.py  test_kb.py  test_parser.py  test_personal_website.py  test_profile_cli.py  test_profiles.py  test_run.py
(+16 files in other folders)
