[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-agents"
version = "0.1.0"
description = "Public-safe QA agent operating-system foundations with profiles, SQLite state, gap detection, and a small planner prototype."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Haley Parks" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
qa-agents = "qa_agents.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests", "strategies/meticulous/tests"]

[tool.setuptools.packages.find]
include = ["qa_agents*"]
